up to latest oauth to stop wsod on login with php oauth extension

--- a/sites/all/modules/contrib/oauth/CHANGELOG
+++ b/sites/all/modules/contrib/oauth/CHANGELOG
@@ -1,3 +1,18 @@
+OAuth 6.x-3.0, 2017-01-25
+------------------------------
+Add missing oauth_callback_confirmed parameter
+#1238752 by aaron1234nz | Ben Coleman | John Franklin | fivefrank | aaron1234nz: Postgres compatability.
+
+OAuth 6.x-3.0-beta6
+------------------------------
+#1155760 by deviantintegral, voxpelli: Catching more exceptions, eg. when the consumer key is incorrect
+#1199360 by Sepehr Lajevardi, voxpelli: Fixed E_NOTICE in OAuth request context loader
+#1199346 by Sepehr Lajevardi: Fixed E_NOTICE in oauth_common_form_consumer_submit()
+#1134444 by grendzy, voxpelli: Warn if Autoload 2.x isn't used
+#1141658 by grendzy, voxpelli: Clear Autoload cache on install
+#1529166 by barraponto: implement hook_requirements()
+#1535764 by bojanz: Signature selection in includes/DrupalOAuthServer.inc is broken.
+
 OAuth 6.x-3.0-beta4, 2011-04-06
 ------------------------------
 by voxpelli: Better coding style
